# capstone

./: .coveragerc  .gitignore  README.md  install.sh  pyproject.toml  requirements.in  requirements.txt
.streamlit/: config.toml
data/output/: 01.csv  02.csv  05.csv
data/raw/: .~lock.disruptions-2024.csv#  .~lock.services-2024.csv#  disruptions-2024.parquet  stations-2023-09.parquet
data/test/: sample-2.csv  sample-2.parquet  sample-3.csv  sample-7.csv
docs/: future-plans.md  planning.md
scripts/: run_all.py  run_app.py  run_etl.py  run_streamlit.py  run_tests.py
src/: constants.py  logger.py
src/extract/: check_data_sources.py  constants.py  extract.py  load_to_dataframe.py
src/load/: load.py
src/streamlit/: app.py
src/streamlit/pages/: general.py
src/streamlit/processing/: constants.py  vis_01.py  vis_02.py  vis_03.py  vis_05.py
src/transform/: constants.py  disruptions.py  explode_row.py  transform.py  utils.py
src/transform/general/: transform_01.py  transform_02.py  transform_03.py  transform_04.py  transform_05.py  transform_general.py
streamlit/: app.py
streamlit/pages/: general.py
tests/: test_explode_row.py  test_load.py  test_load_to_dataframe.py  test_transform_disruptions.py  test_transform_utils.py
tests/extract/: test_check_data_sources.py  test_load_to_dataframe.py
tests/load/: test_load.py
tests/transform/: test_transform.py  test_transform_01.py  test_transform_02.py  test_transform_03.py  test_transform_utils.py
